# game-engine

./: .gitignore  Build-Complete-Release.ps1  CMakeLists.txt  CODE_VIEWER_IMPLEMENTATION.md  COMPREHENSIVE_SCENE_SAVE_DOCUMENTATION.md  Create-Release.ps1  DOCUMENTATION_ORGANIZATION_SUMMARY.md  ENTITY_DRAG_IMPLEMENTATION.md  INSTALLER_COMPLETE.md  LICENSE.txt  MANUAL_GITHUB_UPLOAD.md  NODE_EDITOR_CODE_GENERATION_IMPLEMENTATION.md  NODE_EDITOR_PERSISTENCE_FIX.md  PROCEDURAL_VISIBILITY_FIX.md  Publish-GitHub.ps1  README.md  RELEASE_COMPLETE.md  RELEASE_GUIDE.md  SCENE_WINDOW_SIZE_PERSISTENCE.md  SETUP.md  TRANSFORM_INSPECTOR_INVESTIGATION.md  TRANSFORM_SCALE_ROTATION_DEBUG_ANALYSIS.md  TRANSFORM_SCALE_ROTATION_SOLUTION.md  build-manual.bat  build.bat  build_official_release.bat  collision_editor_paint_fix.md  collision_editor_zoom_paint_fix.md  create_procedural_tiles.ps1  create_sample_images.ps1  enhanced_collision_editor_guide.md  enhanced_entity_scaling.md  optimization_complete.bat  push_to_github.bat  requirements.txt  setup.bat  test_comprehensive_scene_save.bat  test_gravity_fix.bat  test_no_dance_animation.bat  test_player_controller_comprehensive.bat  (+11 more)
docs/: Coordinate_Mismatch_SOLVED.md  Coordinate_System_Fix_v2.md  Entity_0_Selection_Fix.md  Mouse_Centered_Zoom_Feature.md  Nomenclature_System.md  Procedural_Generation_Fix.md  Procedural_Generation_Scene_Fix.md  Procedural_Tile_Selection_SOLVED.md  README.md  Sprite_Selection_Implementation_Status.md  Sprite_Selection_and_Editing_Guide.md  custom_assets_guide.md
docs/editor/: Multi_Window_Scene_Support.md  NODE_EDITOR_RESIZE_GUIDE.md  README.md  Scene_Window_Isolation_Summary.md  Window_State_Persistence.md
docs/features/: ASSET_FOLDER_CONFIGURATION.md  Click_and_Drag_Panning_Feature.md  Procedural_Tile_Selection_Feature.md  README.md  Scene_Window_Zoom_Feature.md
docs/fixes/: CONTINUOUS_DOWNWARD_MOVEMENT_FIX.md  Camera_Control_Window_Fix.md  Coordinate_System_Fix.md  PLAYER_CONTROLLER_DANCE_ANIMATION_FIX.md  PROCEDURAL_MAP_PERSISTENCE_FIX.md  README.md  SPRITE_TEXTURE_UPDATE_FIX.md  TEXTURE_PATH_SERIALIZATION_FIX.md  TRANSFORM_FIX_FINAL_STATUS.md  TRANSFORM_FIX_VERIFICATION.md  TRANSFORM_NODE_EDITOR_FINAL_IMPLEMENTATION.md  TRANSFORM_NODE_EDITOR_INTEGRATION.md  TRANSFORM_NODE_EDITOR_SOLUTION_COMPLETE.md  TRANSFORM_SCALE_ROTATION_FIX.md
docs/guides/: Performance_Optimization_Procedural_Generation.md  README.md  enhanced_procedural_generation_guide.md  tile_image_management_guide.md
docs/systems/: PLAYER_CONTROLLER_GAMELOGIC_INTEGRATION.md  PlayerSystem_Implementation.md  README.md
engine/: __init__.py
examples/: procedural_generation_example.cpp
examples/zelda/: README.md
installer/: GameEditor.exe.manifest  GameEngine.nsi  GameEngine_Professional.nsi
scripts/: tile_asset_helper.bat  tile_asset_helper.sh  tile_creator.bat
src/: main.cpp  runtime.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/components/: ComponentManager.h  Components.h  EntityManager.h  ParticleEffect.cpp
src/core/: Engine.cpp  Engine.h
src/editor/: CollisionEditorWindow.cpp  CollisionEditorWindow.h  CollisionEditorWindow_new.cpp  GameEditor.cpp  GameEditor.h  GameLogicWindow.cpp  GameLogicWindow.h  NodeEditor.cpp  NodeEditor.h  SceneManager.cpp  SceneManager.h  SceneWindow.cpp  SceneWindow.h
src/generation/: OptimizedProceduralGeneration.cpp  OptimizedProceduralGeneration.h  ProceduralGeneration.cpp  ProceduralGeneration.h
src/graphics/: Renderer.cpp  Renderer.h
src/input/: InputManager.cpp  InputManager.h
src/rendering/: TileRenderer.cpp  TileRenderer.h
src/scene/: Scene.cpp  Scene.h
src/systems/: AudioSystem.cpp  CoreSystems.cpp  CoreSystems.h  LightSystem.cpp  ParticleSystem.cpp  PlayerSystem.cpp  PlayerSystem.h  System.h  SystemManager.h
src/tools/: procgen_tool.cpp
src/utils/: ConfigManager.cpp  (+3 more)
(+1 files in other folders)
